--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,9 @@ h4,
 h5,
 h6 {
   font-family: "Raleway", sans-serif;
-  margin-left: 1em;
+}
+.name1 {
+  margin-left: 3em;
 }
 
 /*--------------------------------------------------------------
@@ -248,10 +250,11 @@ h6 {
   position: relative;
   z-index: 2;
   min-width: 300px;
+  margin-left: 2rem;
 }
 
 #hero h1 {
-  margin: 0 0 10px 0;
+  margin: 1 0 10px 0;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
@@ -263,6 +266,7 @@ h6 {
   margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
+  margin-left: 3em;
 }
 
 #hero p span {
