--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 .name1 {
-  margin-left: 3em;
+  margin-left: 8rem;
 }
 
 /*--------------------------------------------------------------
@@ -231,7 +231,8 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/kanaiym_main1.jpeg") top center;
+  background: url("../img/kanaiym_main1-removebg-preview.png") top center;
+  background-color: F5D5AE;
   background-size: cover;
 }
 
@@ -250,7 +251,7 @@ h6 {
   position: relative;
   z-index: 2;
   min-width: 300px;
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 
 #hero h1 {
@@ -265,8 +266,7 @@ h6 {
   color: #fff;
   margin-bottom: 50px;
   font-size: 26px;
-  font-family: "Poppins", sans-serif;
-  margin-left: 3em;
+  margin-left: 8rem;
 }
 
 #hero p span {
