--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,7 @@ h6 {
   width: 100%;
   height: 100vh;
   background: url("../img/kanaiym_main1-removebg-preview.png") top center;
-  background-color: F5D5AE;
+  background-color: #562B08;
   background-size: cover;
 }
 
