--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ h6 {
   margin: 0;
   padding: 0;
   font-weight: 600;
-  -moz-text-align-last: center;
+  -moz-text-align-last:center;
   text-align-last: center;
   font-family: "Poppins", sans-serif;
 }
@@ -231,7 +231,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/kanaiym_main1-removebg-preview.png") top center;
+  background: url("../img/kanaiym_main1-removebg-preview.png");
   background-color: #562B08;
   background-size: cover;
 }
@@ -831,7 +831,6 @@ section {
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
   background-color: #149ddd;
 }
-
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
