--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,7 +360,7 @@ section {
   margin-bottom: 0;
 }
 /*--------------------------------------------------------------
-# Akills
+# Skills
 --------------------------------------------------------------*/
 .skills .progress {
   height: 60px;
